syntax = "proto3";
package auth;
option go_package = "generated/proto/authpb";

import "validate/validate.proto";

message User {
    uint64       id          = 1;
    Biography    biography   = 2;
    Credentials  credentials = 3;
}

message NewUser {
    Biography    biography   = 1;
    Credentials  credentials = 2;
}

message Biography {
    string firstname  = 2; 
    string secondname = 3;
}

message Credentials {
    string email    = 1; 
    string password = 2;
}